read file from argument